# Akvo-ResponseGrouper

./: .bandit  .gitignore  MANIFEST.in  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  release.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
dev/: docker-compose.prod.yml  docker-compose.yml
dev/backend/: .coveragerc  .gitignore  main.py  requirements.txt  start.sh  test.sh
dev/backend/core/: config.py  db.py
dev/backend/migration/: env.py
dev/backend/models/: answer.py  data.py  form.py  option.py  question.py  question_group.py
dev/backend/routes/: main.py
dev/backend/scripts/: seeder_datapoint.py  seeder_form.py
dev/backend/sources/: 494780323.json  556240162.json  category.json  form.json  real-form.json
dev/backend/tests/: conftest.py  test_00_collection.py  test_01_form.py  test_02_category.py  test_03_views.py  test_04_collection.py
dev/db/docker-entrypoint-initdb.d/: 000-init.sql
dev/db/script/: dump-db.sh
dev/orgs/: database.org
docs/: database.org  research.csv  research.org
scripts/akvo-response-grouper-value-check/: .gitignore  category.json  check_data.ipynb  check_data.py
src/AkvoResponseGrouper/: __init__.py  db.py  example.py  main.py  migrator.py  models.py  response_grouper.py  routes.py  utils.py  views.py
src/AkvoResponseGrouper/cli/: checker.py  checker_db.py  generate_schema.py  migrate.py
src/AkvoResponseGrouper/db/: connection.py  crud_category.py
tests/: category.json  test_category_checker.py  test_category_data_frame.py  test_example.py
(+13 files in other folders)
