[metadata]
version = attr: AkvoResponseGrouper.__version__
license_files = LICENSE

[flake8]
# Flake plugins:
max-line-length = 79
max-complexity = 6
inline-quotes = single
accept-encodings = utf-8
isort-show-traceback = True
# Excluding some directories:
exclude = .git,__pycache__,.tox
plugins =
    flake8_quotes
    flake8-isort
    flake8-duplicated
    flake8-bugbear
    flake8-comprehensions

[flake8_quotes]
max-line-length = 79
inline-quotes = double
multiline-quotes = double
docstring-quotes = double

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[duplicated]
# ignore comments and blank lines
ignore-docstrings = yes
ignore-imports = yes

[bandit]
exclude = /tests,/dev/backend/tests,/src/AkvoResponseGrouper/tests

[tool.black]
line-length = 79
